fix grid gap mobile

--- a/style.sass
+++ b/style.sass
@@ -221,8 +221,8 @@ header .container
 .grid
     display: grid
     grid-template-columns: repeat(1, 1fr)
-    grid-template-rows: repeat(8, 120px)
-    gap: 24px
+    grid-template-rows: repeat(8, 130px)
+    gap: 30px
 .creation
     position: relative
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px
@@ -262,10 +262,10 @@ header .container
         margin-bottom: 80px
     .grid
         grid-template-columns: repeat(3, 1fr)
-        grid-template-rows: repeat(3, 450px)
+        grid-template-rows: repeat(3, 430px)
     #creations button
         position: absolute
-        top: -30px
+        top: -25px
         right: calc(8px + 1.5625vw) 
 @media only screen and (min-width: 1024px)
     .grid
